Remove unneeded executor for GoogleGeocoder